@@ -129,5 +129,66 @@
 			</OnLoad>
 		</Scripts>
 	</Frame>
+
+	<Frame name="TellMeWhen_GM_Texture" inherits="TellMeWhen_OptionsModuleContainer" virtual="true">
+		<Size y="32"/>
+		<Frames>
+			<Frame parentKey="Texture" inherits="TMW_DropDownMenuTemplate">
+				<Anchors>
+					<Anchor point="TOPLEFT" x="9" y="-6"/>
+					<Anchor point="RIGHT" x="-9" />
+				</Anchors>
+				<Scripts>
+					<OnLoad>
+						TMW:CInit(self)
+						self:SetWidth(200)
+						self:SetTexts(TMW.L["UIPANEL_BARTEXTURE"])
+						self.BUTTON_HEIGHT = 20
+
+						local f, s = self.Text:GetFont()
+						self.Text:SetFont(f, s, "THINOUTLINE")
+
+						local values = {
+							SFX = SOUND_VOLUME,
+							Music = MUSIC_VOLUME,
+							Ambience = AMBIENCE_VOLUME,
+							Dialog = DIALOG_VOLUME,
+							Master = TMW.L["SOUND_CHANNEL_MASTER"],
+						}
+
+						local LSM = LibStub("LibSharedMedia-3.0")
+						self:SetSetting("TextureName")
+						self:SetEasyFunctions(
+							function()
+								return pairs({"", unpack(LSM:List("statusbar"))})
+							end,
+							function(info, id, name)
+								if name == "" then
+									info.text = TMW.L["UIPANEL_USE_PROFILE"]
+									info.tooltipTitle = TMW.L["UIPANEL_USE_PROFILE"] .. " (" .. TMW.db.profile.TextureName .. ")"
+									info.texture = LSM:Fetch("statusbar", TMW.db.profile.TextureName)
+								else
+									info.text = name
+									info.tooltipTitle = name
+									info.texture = LSM:Fetch("statusbar", name)
+								end
+
+								info.value = name
+							end
+						)
+
+						self:SetScrollable(true)
+					</OnLoad>
+				</Scripts>
+			</Frame>
+		</Frames>
+		<Scripts>
+			<OnLoad>
+				TMW:CInit(self)
+				
+				self:SetTitle(TMW.L["UIPANEL_BARTEXTURE"])
+			</OnLoad>
+		</Scripts>
+	</Frame>
  
 </Ui>
