@@ -4,10 +4,11 @@ TMW.CHANGELOG_LASTVER="6.2.6"
 
 TMW.CHANGELOG = [==[
 ===v8.2.1===
-* Added some missing currency definitions
-* Fixed updating of class-specific resource conditions for non-player units.
+* You can now change bar textures on a per-group basis.
+* Added some missing currency definitions.
 
 ====Bug Fixes====
+* Fixed updating of class-specific resource conditions for non-player units.
 * On Start and On Finish notification triggers should no longer spaz out and trigger excessively.
 * Meta icons should now always use the correct unit when evaluating the DogTags used in their text displays.
 * Fixed meta icon rearranging.
